tests/ui/inference/need_type_info/incompat-call-after-qualified-path-0.stderr
error[E0282]: type annotations needed
  --> $DIR/incompat-call-after-qualified-path-0.rs:21:6
   |
LL |   f(|a, b| a.cmp(b));
   |      ^       --- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
LL |   f(|a: /* Type */, b| a.cmp(b));
   |       ++++++++++++

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/incompat-call-after-qualified-path-0.rs:21:3
   |
LL |   f(|a, b| a.cmp(b));
   |   ^ --------------- unexpected argument
   |
note: function defined here
  --> $DIR/incompat-call-after-qualified-path-0.rs:17:4
   |
LL | fn f() {}
   |    ^
help: remove the extra argument
   |
LL -   f(|a, b| a.cmp(b));
LL +   f();
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0061, E0282.
For more information about an error, try `rustc --explain E0061`.
